Errors
return tree_df, links_df(key: str, level: int, rel_name: str) -> dict:
                                ^
SyntaxError: invalid syntax
